  to length-one R vectors (at the exception of None, converted
  to R_NilValue).

- Python slices can now be used on R vector-like objects 

:mod:`rpy2.rlike`:

- :meth:`iteritems` for :class:`OrdDict` (formerly:class:`ArgDict`) 
  and :class:`TaggedList`

- static method :meth:`from_iteritems` for :class:`TaggedList`,
  for creating a TaggedList from any object having a method :meth:`iteritems`

- Better handling of R's missing values NA, NA_integer_, and NA_real_.

Changes
-------

- The setup.py script is now taking command-line arguments when specifying
  R library-related paths are wished. python setup.py --help build_ext will
  list them
  
:mod:`rpy2.robjects`:

- RS4 no longer makes R's slots as Python attributes through :meth:`__attr__`

- The package is split into modules

- The broken variables NA_STRING, NA_INTEGER, NA_LOGICAL, and NA_REAL are
  removed. The documentation on missing values was revised.

- :data:`globalEnv` and :data:`baseNameSpaceEnv` were renamed to 
  :data:`globalenv` and :data:`baseenv` respectively

- The parameter *wantFun* in :meth:`Environment.get` 
  (formerly *REnvironment.get()*) is now *wantfun* 

- :attr:`Vector.r` does not have a __getitem__ method any longer
  (see in `.rx` and `.rx2` in the new features)

- :meth:`colnames`, :meth:`rownames`, :meth:`nrow`, :meth:`ncol` 
  for :class:`DataFrame` are now property-style getters

- :meth:`nrow`, :meth:`ncol` for :class:`Array` 
  are now property-style getters

- static method :meth:`from_csvfile` and 
  instance method :meth:`to_csvfile` for :class:`DataFrame`

- module :mod:`lib` to store modules representing R packages

- module :mod:`lib.ggplot2` for the CRAN package ggplot2.

- renaming of few classes, the *R* prefix: :class:`Formula` (from *RFormula*),
  :class:`DataFrame` (from *RDataFrame*), :class:`Array` (from *RArray*),
  :class:`Matrix` (from *RMatrix*), :class:`Environment` (from *REnvironment*),